# c-unittest

./: CMakeLists.txt  README.md
test/: test_sum.c
